Updated privacy policy and fixed overflow style bug

--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
 
   &.page--homepage {
     display: flex;
